# knncolle_tatami

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  classes.html  classknncolle__tatami_1_1Matrix-members.html  classknncolle__tatami_1_1Matrix.html  classknncolle__tatami_1_1Matrix__coll__graph.map  classknncolle__tatami_1_1Matrix__coll__graph.md5  dir_1fba2cdf66d53deca0b24bc3359f6d03.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  knncolle__tatami_8hpp.html  knncolle__tatami_8hpp__incl.map  knncolle__tatami_8hpp__incl.md5  knncolle__tatami_8hpp_source.html  knncolle_tatami.tag  namespaceknncolle__tatami.html  namespaces.html
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_4.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_e.js  classes_f.js  files_1.js  files_11.js  files_3.js  files_5.js  files_8.js  files_9.js  files_a.js  files_b.js  files_d.js  files_e.js  files_f.js  functions_0.js  functions_1.js  functions_11.js  functions_2.js  (+17 more)
include/knncolle_tatami/: knncolle_tatami.hpp
tests/: CMakeLists.txt
tests/src/: knncolle_tatami.cpp
